--- a/style.css
+++ b/style.css
@@ -18,3 +18,28 @@ body
   background-image: linear-gradient(to right, #a517ba, #5f1782);
   padding: 0 !important;
 }
+.navbar-brand img 
+{
+  height: 40px;
+  padding-left: 20px;
+}
+.navbar-nav li
+{
+  padding: 0 10px;
+}
+.navbar-nav li a
+{
+  color: #fff !important;
+  font-weight:  600px;
+  float: right;
+  text-align: left;
+}
+.fa-bars
+{
+  color: #fff;
+  font-size: 30px !important;
+}
+.navbar-toggler
+{
+  outline: none !important;
+}
