--- a/style.css
+++ b/style.css
@@ -1,45 +1,57 @@
-*
-{
+*{
   margin: 0;
   padding: 0;
 }
-body
-{
+body{
   font-family: sans-serif;
 }
-#nav-bar
-{
+#nav-bar{
   position: sticky;
   top: 0;
   z-index: 10;
 }
-.navbar
-{
+.navbar{
   background-image: linear-gradient(to right, #a517ba, #5f1782);
   padding: 0 !important;
 }
-.navbar-brand img 
-{
+.navbar-brand img {
   height: 40px;
   padding-left: 20px;
 }
-.navbar-nav li
-{
+.navbar-nav li{
   padding: 0 10px;
 }
-.navbar-nav li a
-{
+.navbar-nav li a{
   color: #fff !important;
   font-weight:  600px;
   float: right;
   text-align: left;
 }
-.fa-bars
-{
+.fa-bars{
   color: #fff;
   font-size: 30px !important;
 }
-.navbar-toggler
-{
+.navbar-toggler{
   outline: none !important;
+}
+
+/* ----------------------Banner Section ----------------------*/
+
+#banner{
+  background-image: linear-gradient(to right, #a517ba, #5f1782);
+  color: #fff;
+  padding-top: 5%;
+}
+.promo-title{
+  font-size: 40px;
+  font-weight: 600;
+  margin-top: 100px;
+}
+.play-btn{
+  width: 45px;
+  margin: 20px;
+}
+#banner a{
+  color: #fff;
+  text-decoration: none;
 }
